[aliases]
test=pytest

[metadata]
name = yamlprocessor
version = attr: yamlprocessor.__version__
author = Matt Shin
author_email = matthew.shin@metoffice.gov.uk
description = Process values in YAML files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetOffice/yamlprocessor
project_urls =
    Bug Tracker = https://github.com/MetOffice/yamlprocessor/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    jmespath
    pyyaml
setup_require =
    pytest-runner
tests_require =
    flake8
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    yp-data = yamlprocessor.dataprocess:main
    yp-schema = yamlprocessor.schemaprocess:main

[options.packages.find]
where = src
